--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -2,8 +2,9 @@ user.email.email-existed=Email already exists.
 user.email.email-not-found=Email is not found.
 
 #Confirmation token link
-confirmation-token.token.token-not-found=Confirmation link not found.
-confirmation-token.otp.token-expired=Confirmation link is expired.
+confirmation-token.link.link-not-found=Confirmation link not found.
+confirmation-token.link.link-expired=Confirmation link is expired.
+confirmation-token.link.link-already-confirmed=Link has already confirmed
 
 confirmation-token.otp.otp-not-found=OTP not found.
 confirmation-token.otp.otp-expired=OTP is expired.
