fixed 19/21 conversations in pull request

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -1,3 +1,7 @@
+#Phone region
+phone.phone-validation-region = VN
+
+#Email validation
 user.email.email-existed=Email already exists.
 user.email.email-not-found=Email is not found.
 
@@ -6,5 +10,6 @@ confirmation-token.link.link-not-found=Confirmation link not found.
 confirmation-token.link.link-expired=Confirmation link is expired.
 confirmation-token.link.link-already-confirmed=Link has already confirmed
 
+#Confirmation token Otp
 confirmation-token.otp.otp-not-found=OTP not found.
 confirmation-token.otp.otp-expired=OTP is expired.
