added password exception handler

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -1,6 +1,10 @@
 #Phone region
 phone.phone-validation-region = VN
 
+#User
+user.account.account-not-enabled=Account is not enabled.
+user.account.password-incorrect=Password is incorrect.
+
 #Email validation
 user.email.email-existed=Email already exists.
 user.email.email-not-found=Email is not found.
