done with jwt token, refreshToken, mfa using google authentication

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -18,3 +18,10 @@ confirmation-token.link.link-already-confirmed=Link has already confirmed
 #Confirmation token Otp
 confirmation-token.otp.otp-not-found=OTP not found.
 confirmation-token.otp.otp-expired=OTP is expired.
+
+#JTI
+session.jti.jti-not-found=This session doesn't exist
+session.jti.jti-expired=This session expired
+
+#Google Authentication OTP
+google-authentication-otp-invalid=OTP is invalid
