added authorization for ROLE_USER, ROLE_ADMIN

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -22,6 +22,7 @@ confirmation-token.otp.otp-expired=OTP is expired.
 #JTI
 session.jti.jti-not-found=This session doesn't exist
 session.jti.jti-expired=This session expired
+session.jti.jti-not-active=This session is no longer active
 
 #Google Authentication OTP
 google-authentication-otp-invalid=OTP is invalid
