--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -26,3 +26,12 @@ session.jti.jti-not-active=This session is no longer active
 
 #Google Authentication OTP
 google-authentication-otp-invalid=OTP is invalid
+
+#IO Exception
+util.io.exception=IO exception when opening file
+
+#Template Exception
+freemarker.template.exception=Issue loading freemarker template
+
+#Message Exception
+jarkarta.mail.exception=Issue trying to send mail
