added reset password

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -5,6 +5,7 @@ phone.phone-validation-region = VN
 user.account.account-not-enabled=Account is not enabled.
 user.account.password-incorrect=Password is incorrect.
 user.account.login-exceeded=Password is incorrect.
+user.password.existed=Changed password should not be the same as the current one
 
 #Email validation
 user.email.email-existed=Email already exists.
