--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -1,5 +1,6 @@
 #Phone region
 phone.phone-validation-region = VN
+phone.phone-country-code = +84
 
 #User
 user.account.account-not-enabled=Account is not enabled.
@@ -10,6 +11,10 @@ user.password.existed=Changed password should not be the same as the current one
 #Email validation
 user.email.email-existed=Email already exists.
 user.email.email-not-found=Email is not found.
+user.email.email-duplicate=Changed email should not be the same as the current one.
+
+#Phone validation
+user.phone.phone-duplicate=Your changed phone number should not be the same as current phone number
 
 #Confirmation token link
 confirmation-token.link.link-not-found=Confirmation link not found.
