fixed refresh token

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -29,6 +29,11 @@ confirmation-token.otp.otp-expired=OTP is expired.
 session.jti.jti-not-found=This session doesn't exist
 session.jti.jti-expired=This session expired
 session.jti.jti-not-active=This session is no longer active
+session.jti.jti-not-valid=The refresh token provided is invalid
+
+#JWT
+session.jwt.jti-is-expired=JWT token is expired
+
 
 #Google Authentication OTP
 google-authentication-otp-invalid=OTP is invalid
