added user management

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -6,7 +6,10 @@ phone.phone-country-code = +84
 security.core.userdetails=No user is currently logged in
 
 #User
+user.account.id-not-found=ID not found.
 user.account.account-not-enabled=Account is not enabled.
+user.account.account-deleted=Account is deleted.
+user.account.account-blocked=Account is blocked.
 user.account.password-incorrect=Password is incorrect.
 user.account.login-exceeded=Password is incorrect.
 user.password.existed=Changed password should not be the same as the current one
