added book management

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -52,3 +52,14 @@ freemarker.template.exception=Issue loading freemarker template
 
 #Message Exception
 jarkarta.mail.exception=Issue trying to send mail
+
+#CSV
+opencsv.csv.invalid=Invalid csv file
+opencsv.csv.size=CSV file must be smaller than 5MB
+
+#Book
+service.fields.null=Title, description, quantity, genreId, and authorId must not be null.
+service.book.not-found=Author is not found
+service.author.not-found=Author is not found
+service.genere.not-found=Genre is not found
+service.quantity.not-found=Quantity must be greater or equal 0
