added return book
added return book and also handle concurrency

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -69,3 +69,11 @@ service.borrow-book.not-unique-genre=User can only borrow one book per genre
 service.borrow-book.insufficient-inventory=The book is currently out of stock
 service.borrow-book.removed=The book is currently removed
 service.borrow-book.active-session=User need to return past borrowed books before making another request
+service.borrow-book.empty-borrow-list=Your list of books is empty
+service.borrow-book.conflict=Try again later while process book borrowing
+
+#Return Book
+service.return-book.empty-return-list=Your return list is empty
+service.return-book.not-found=No active borrow session found
+service.return-book.book-not-found=Book with id is not found:
+service.return-book.conflict=Try again later while process book returning
