fixed most things

--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -35,6 +35,7 @@ session.jwt.jti-is-expired=JWT token is expired
 google-authentication-otp-invalid=OTP is invalid
 #IO Exception
 util.io.exception=IO exception when opening file
+util.io.deletion=Unable to delete file
 #Template Exception
 freemarker.template.exception=Issue loading freemarker template
 #Message Exception
@@ -48,6 +49,10 @@ service.book.not-found=Author is not found
 service.author.not-found=Author is not found
 service.genere.not-found=Genre is not found
 service.quantity.not-found=Quantity must be greater or equal 0
+#Time criteria
+service.time-criteria.from-time-invalid=Valid format is mmDDyyyy HHmmss
+service.time-criteria.to-time-invalid=Valid format is mmDDyyyy HHmmss
+service.time-criteria.from-to-invalid=From time must be smaller than to time
 #Borrow Book
 service.borrow-book.not-unique-genre=User can only borrow one book per genre
 service.borrow-book.insufficient-inventory=The book is currently out of stock
