--- a/src/main/resources/lang/label_en.properties
+++ b/src/main/resources/lang/label_en.properties
@@ -9,7 +9,7 @@ user.account.account-not-enabled=Account is not enabled.
 user.account.account-deleted=Account is deleted.
 user.account.account-blocked=Account is blocked.
 user.account.password-incorrect=Password is incorrect.
-user.account.login-exceeded=Password is incorrect.
+user.account.login-exceeded=Try again later due to many failed login attempts
 user.password.existed=Changed password should not be the same as the current one
 #Email validation
 user.email.email-existed=Email already exists.
